--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
   <script src="/node_modules/bootstrap/dist/js/bootstrap.js"></script>
-  <link rel="stylesheet" href="/src/scss/main.css">
+  <link rel="stylesheet" href="src/scss/main.css">
   <title>X-body</title>
 </head>
 <body>
@@ -195,16 +195,16 @@
 
   <section class="container-fluid images_style" id="photos">
     <div class="row images_section">
-      <li class="show_image"><img src="/images/635048014540156250.jpg" class="img" alt="..."></li>
-      <li class="show_image"><img src="/images/article-2605136-1D2067E800000578-932_964x519.jpg" class="img" alt="..."></li>
-      <li class="show_image"><img src="/images/best-fitness-gyms.jpg" class="img" alt="..."></li>
-      <li class="show_image"><img src="/images/wonderful-s.jpg" class="img" alt="..."></li>
+      <li class="show_image"><img src="images/635048014540156250.jpg" class="img" alt="..."></li>
+      <li class="show_image"><img src="images/article-2605136-1D2067E800000578-932_964x519.jpg" class="img" alt="..."></li>
+      <li class="show_image"><img src="images/best-fitness-gyms.jpg" class="img" alt="..."></li>
+      <li class="show_image"><img src="images/wonderful-s.jpg" class="img" alt="..."></li>
     </div>
     <div class="row images_section">
-      <li class="show_image"><img src="/images/Square_wellness_xxxxxxxxxxx_i118937_03.jpg" class="img" alt="..."></li>
-      <li class="show_image"><img src="/images/SoHoChi_037_copy.jpg" class="img" alt="..."></li>
-      <li class="show_image"><img src="/images/gym-gym-in-house-traditional-home-gym.jpg" class="img" alt="..."></li>
-      <li class="show_image"><img src="/images/weight-training-machines.jpg" class="img" alt="..."></li>
+      <li class="show_image"><img src="images/Square_wellness_xxxxxxxxxxx_i118937_03.jpg" class="img" alt="..."></li>
+      <li class="show_image"><img src="images/SoHoChi_037_copy.jpg" class="img" alt="..."></li>
+      <li class="show_image"><img src="images/gym-gym-in-house-traditional-home-gym.jpg" class="img" alt="..."></li>
+      <li class="show_image"><img src="images/weight-training-machines.jpg" class="img" alt="..."></li>
     </div>
   </section>
 
