--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
         <ul class="navbar-nav mb-lg-0 align-items-center">
           <li>
-            <a class="navbar-brand px-5" href="index.html"><img class="logo" src="images/small_logo2.png" alt=""></a>
+            <a class="navbar-brand px-5" href="index.html"><img class="logo" src="/images/small_logo2.png" alt=""></a>
           </li>
           <li class="nav-item">
             <a class="nav-link px-5" href="index.html">Home</a>
@@ -397,7 +397,7 @@
         <div class="col-4 border-end">
           <ul class="nav">
             <li class="nav-item">
-              <a class="navbar-brand" href="index.html"><img class="logo" src="images/small_logo2.png" alt=""></a>
+              <a class="navbar-brand" href="index.html"><img class="logo" src="/images/small_logo2.png" alt=""></a>
             </li>
           </ul>
         </div>
